@@ -2,6 +2,7 @@ package edu.cst.webserver.uri;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -12,6 +13,7 @@ import java.util.Map;
  * Time: 1:15 AM
  */
 public class QueryString {
+    private static final String UTF_8 = "UTF-8";
 
     /**
      * getUrlParams returns key, value queryStringMap built from queryString
@@ -20,8 +22,12 @@ public class QueryString {
      */
     public static Map<String, String> parse(String queryString) {
 
-
         Map<String, String> queryStringMap = new HashMap<String, String>();
+        if(queryString == null || queryString.isEmpty()){
+            return queryStringMap;
+        }
+
+
 
         //splitting sting with "#". only first part of string, before "#" is interesting.
         queryString = queryString.split("#")[0];
@@ -31,18 +37,13 @@ public class QueryString {
             String key = "";
             String value = "";
             try {
-                key = URLDecoder.decode(pairSplitted[0], "UTF-8");
+                key = URLDecoder.decode(pairSplitted[0], UTF_8);
+                value = URLDecoder.decode(pairSplitted[1], UTF_8);
             } catch (UnsupportedEncodingException e) {
                 e.printStackTrace();
                 // TODO replace with logger [OZ]
             }
-            try {
-                value = URLDecoder.decode(pairSplitted[1], "UTF-8");
-            } catch (UnsupportedEncodingException e) {
-                e.printStackTrace();
-                // TODO replace with logger [OZ]
-            }
-            if (!key.isEmpty()) {
+            if (!key.isEmpty() && !value.isEmpty()) {
                 queryStringMap.put(key, value);
             }
         }
